--- a/web/index.css
+++ b/web/index.css
@@ -3,10 +3,10 @@
 }
 
 body {
-	width: 85%;
-	max-width: 600px;
+	width: 85vw;
+	max-width: 900px;
 	margin: 0 auto;
-	padding: 5vw;
+	padding: 10px 5vw;
 	background-color: #D7FBFF;
 	overflow: scroll;
 }
@@ -14,8 +14,11 @@ body {
 canvas {
 	cursor: pointer;
 	border: 2pt solid black;
-	width: 500px;
-	max-width: 80%;
+
+	width: 85vw;
+	max-width: 650px;
+	height: 85vw;
+	max-height: 650px;
 }
 
 .hidden {
